--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                 <a href="${produto.link}" target="_blank" class="produto-preco">
                                     Clique aqui para ver o valor
                                 </a>
-                                <a href="${produto.link}" target="_blank" class="tarja-preco" data-loja-nome="${produto.loja}">
+                                <a href="${produto.link}" target="_blank" class="tarja-preco">
                                     Comprar na ${produto.loja}
                                 </a>
                             `;
