--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
     </div>
     <footer>
         <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
+        <p class="disclaimer-afiliado">
+            O **Centro de Compras** participa de programas de afiliados e recebe comissões por compras realizadas através dos links em nosso site.
+            Isso não gera nenhum custo adicional para você e nos ajuda a manter o site no ar.
+        </p>
     </footer>
     <div class="robo-assistente">
         <a href="https://wa.me/5521975179737" target="_blank">
