--- a/index.html
+++ b/index.html
@@ -63,20 +63,34 @@
         
         #load-more { display: none; margin: 20px auto; padding: 10px 20px; background: #ff6200; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; }
         #load-more:hover { background: #e55a00; }
-        .produto-card { transition: transform 0.2s; background: white; border-radius: 8px; padding: 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); max-height: 300px; }
+        .produto-card { transition: transform 0.2s; background: white; border-radius: 8px; padding: 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); max-height: 250px; } /* Altura ajustada */
         .produto-card:hover { transform: translateY(-5px); }
         .produto-card span { font-size: 14px; display: block; margin: 5px 0; }
-        .carrossel { position: relative; width: 100%; max-height: 150px; overflow: hidden; }
+        .carrossel { position: relative; width: 100%; max-height: 100px; overflow: hidden; } /* Altura da imagem ajustada */
         .carrossel-imagens { display: flex; width: 100%; height: 100%; }
-        .carrossel-imagens img { width: 100%; height: 150px; object-fit: cover; flex: 0 0 100%; transition: transform 0.3s ease; }
-        .grid-produtos { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; }
-        @media (max-width: 600px) {
-            .grid-produtos { grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); }
-            .produto-card { max-height: 250px; }
-            .carrossel-imagens img { height: 120px; }
-            .tarja-preco { font-size: 10px; padding: 5px 8px; }
-            .produto-card span { font-size: 12px; }
-            .modal-content .carrossel-imagens img { max-width: 100%; max-height: 400px; }
+        .carrossel-imagens img { width: 100%; height: 100px; object-fit: contain; flex: 0 0 100%; transition: transform 0.3s ease; } /* Altura da imagem ajustada */
+        
+        /* Ajuste do grid para 8 produtos por linha em telas grandes e responsividade */
+        .grid-produtos { 
+            display: grid; 
+            grid-gap: 10px;
+        }
+        @media (min-width: 1200px) {
+            .grid-produtos {
+                grid-template-columns: repeat(8, 1fr);
+            }
+        }
+        @media (max-width: 1199px) and (min-width: 768px) {
+            .grid-produtos {
+                grid-template-columns: repeat(4, 1fr);
+            }
+        }
+        @media (max-width: 767px) {
+            .grid-produtos {
+                grid-template-columns: repeat(2, 1fr);
+            }
+            .produto-card { max-height: 200px; }
+            .carrossel-imagens img { height: 80px; }
         }
     </style>
 </head>
@@ -223,7 +237,7 @@
                         loja: currentLoja,
                         busca: currentBusca,
                         page: currentPage,
-                        limit: 12
+                        limit: 24 // AQUI: Alterado de 12 para 24
                     });
                     const response = await fetch(`${API_BASE_URL}/api/produtos?${params}`);
                     if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
