--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         .tarja-shopee:hover { background-color: #d84126; }
         .tarja-mercadolivre:hover { background-color: #e0d000; }
         .tarja-alibaba:hover { background-color: #e55a00; }
-        
+
         #load-more { display: none; margin: 20px auto; padding: 10px 20px; background: #ff6200; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; }
         #load-more:hover { background: #e55a00; }
         .produto-card { transition: transform 0.2s; background: white; border-radius: 8px; padding: 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); max-height: 250px; }
         .produto-card:hover { transform: translateY(-5px); }
         .produto-card span { font-size: 14px; display: block; margin: 5px 0; }
-        .carrossel { position: relative; width: 100%; max-height: 100px; overflow: hidden; }
-        .carrossel-imagens { display: flex; width: 100%; height: 100%; }
+        .carrossel { position: relative; width: 100%; height: 100px; overflow: hidden; }
+        .carrossel-imagens { display: flex; width: 100%; height: 100px; }
         .carrossel-imagens img { width: 100%; height: 100px; object-fit: contain; flex: 0 0 100%; transition: transform 0.3s ease; }
         
         /* Ajuste do grid para 8 produtos por linha em telas grandes e responsividade */
@@ -131,9 +131,6 @@
                 <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')" role="button" aria-label="Filtrar por Infantil">Infantil</li>
                 <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('Celulares')" role="button" aria-label="Filtrar por Celulares">Celulares</li>
                 <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('Eletrodomésticos')" role="button" aria-label="Filtrar por Eletrodomésticos">Eletrodomésticos</li>
-                <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')" role="button" aria-label="Filtrar por Produtos para Pet">Pet</li>
-                <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')" role="button" aria-label="Filtrar por Jardinagem">Jardinagem</li>
-                <li class="categoria-item" data-categoria="automovel" onclick="filtrarPorCategoria('automovel')" role="button" aria-label="Filtrar por Automóvel">Automóvel</li>
             </ul>
         </aside>
         <main>
@@ -169,9 +166,6 @@
             </div>
         </main>
     </div>
-    <div class="aviso-afiliado">
-        Este site participa de programas de afiliados e pode receber comissões pelas compras feitas através dos links.
-    </div>
     <div class="modal" id="imageModal">
         <button class="modal-close" onclick="closeModal()">✕</button>
         <div class="modal-content" id="modalCarrossel">
@@ -202,7 +196,6 @@
         document.addEventListener('DOMContentLoaded', () => {
             document.getElementById('year').textContent = new Date().getFullYear();
 
-            // Três cliques no logotipo para acessar a página de administração
             let clickCount = 0;
             let clickTimeout;
             document.getElementById('site-logo').addEventListener('click', (e) => {
@@ -257,18 +250,19 @@
                             const placeholderUrl = 'https://via.placeholder.com/150';
                             const imageUrl = produto.imagens && produto.imagens.length > 0 ? produto.imagens[0] : placeholderUrl;
 
-                            div.innerHTML = `
+                            const cardHTML = `
                                 <div class="carrossel">
                                     <div class="carrossel-imagens" data-images='${JSON.stringify(produto.imagens || [placeholderUrl])}'>
                                         <img src="${imageUrl}" alt="${produto.nome}">
                                     </div>
                                 </div>
                                 <span>${produto.nome}</span>
-                                <a href="${produto.link}" target="_blank" class="tarja-preco ${lojaClass}">Clique aqui para ver o preço</a>
+                                <a href="${produto.link}" target="_blank" class="tarja-preco ${lojaClass}">Comprar na ${produto.loja}</a>
                             `;
+
+                            div.innerHTML = cardHTML;
                             gridProdutos.appendChild(div);
 
-                            // Adiciona o manipulador de erro à imagem recém-criada
                             const newImg = div.querySelector('img');
                             newImg.onerror = () => {
                                 console.error(`Erro ao carregar imagem: ${newImg.src}`);
